release_candidates/4.1b1/_sources/index.txt
*******************************************
perfSONAR User Guide
*******************************************

perfSONAR is a collection of software for performing and sharing end-to-end network measurements. This document guides you through the process of installing, configuring and using perfSONAR on one or more hosts. 

.. _index-getting_started:

Getting Started
---------------
.. toctree::
   :maxdepth: 1
    
   intro_about

.. _index-planning:

Planning for Installation
-------------------------
.. toctree::
   :maxdepth: 1
   
   install_options
   install_hardware
   install_small_node_details
   
   
.. _index-installation:

Installation
------------
.. toctree::
   :maxdepth: 1
   
   install_getting
   install_quick_start
   install_centos_netinstall
   install_centos_fullinstall
   install_config_first_time
   install_centos
   install_debian
   install_migrate_centos7


.. _index-toolkit:

perfSONAR Toolkit
------------------
.. toctree::
   :maxdepth: 1
   
   manage_choose
   manage_regular_tests
   manage_admin_info
   manage_ntp
   manage_logs
   manage_update
   manage_users
   manage_tuning
   manage_dual_xface
   manage_security
   manage_limits
   manage_extra_tools
   manage_daemons
   using_graphs
   using_ext_tools


.. _index-pscheduler:

Running Measurements with pScheduler
-------------------------------------
.. toctree::
   :maxdepth: 1
   
   pscheduler_intro
   pscheduler_client_tasks
   pscheduler_client_schedule
   pscheduler_server_running
   config_pscheduler_limits
   pscheduler_ref_tests_tools
   pscheduler_ref_archivers
   pscheduler_ref_contexts
   pscheduler_ref_bwctl

Managing Multiple Hosts with pSConfig
-------------------------------------
.. toctree::
   :maxdepth: 1
   
   psconfig_intro
   psconfig_quickstart
   psconfig_templates_intro
   psconfig_publish
   psconfig_pscheduler_agent
   psconfig_maddash_agent
   mca
   psconfig_templates_vars
   psconfig_templates_advanced
   psconfig_autoconfig
   psconfig_meshconfig_migrate
   
.. _index-multiple:

Archiving Measurements with esmond
----------------------------------
.. toctree::
   :maxdepth: 1
   
   multi_ma_install
   multi_ma_clustering
   multi_ma_backups

.. _index-psui:

Additional Tools: perfsonarUI
-----------------------------
.. toctree::
   :maxdepth: 1
   
   install_psui
   using_psui


.. _index-config_ref:

Configuration Reference
-----------------------

.. toctree::
   :maxdepth: 1

   config_files
   config_ls_registration
   config_pscheduler
   config_pscheduler_limits
   config_owamp
   config_owamp_limits

.. _index-troubleshooting:

Troubleshooting
---------------
.. toctree::
   :maxdepth: 1

   troubleshooting_overview
   FAQ

.. _index-data_access:

Accessing Raw Data 
------------------
.. toctree::
   :maxdepth: 1
   
   client_tools
   client_apis

.. _index-previous_releases:

Previous Releases
-----------------
.. toctree::
   :maxdepth: 1
   
   previous_releases

.. _index-future_releases:

Future Releases
---------------
.. toctree::
   :maxdepth: 1
   
   install_rcs

.. _index-further_info:

Further Information
-------------------
* `Project Homepage <http://www.perfsonar.net>`_
* `Source Code Repository <https://github.com/perfsonar>`_
* `Issue Tracker <https://github.com/perfsonar/project/issues>`_
* `Project Wiki <https://github.com/perfsonar/project/wiki>`_
* `Frequently Asked Questions (FAQs) <http://www.perfsonar.net/about/faq/>`_
* Mailing Lists

  * `User Mailing List <https://lists.internet2.edu/sympa/subscribe/perfsonar-user>`_ - Forum where users may ask and answer questions about their perfSONAR deployments
  * `Announcement Mailing List <https://lists.internet2.edu/sympa/subscribe/perfsonar-announce>`_ - List where important announcements such as new releases and security updates are posted.

.. _index-deployment:

Deployment Examples
-------------------
.. toctree::
   :maxdepth: 1
   
   deployment_examples

.. _index-related:

Related Projects
----------------
* `esmond <http://software.es.net/esmond/>`_
* `iperf3 <http://software.es.net/iperf/>`_
* `Lookup Service <http://code.google.com/p/simple-lookup-service/>`_
* `MaDDash <http://software.es.net/maddash/>`_
* `psUI <https://forge.geant.net/forge/display/perfsonar/Change+Log/>`_

.. _index-search:

Search
----------------

* :ref:`search`
